--- a/package.json
+++ b/package.json
@@ -23,5 +23,6 @@
     "@vitejs/plugin-react": "^4.3.4",
     "gh-pages": "^6.3.0",
     "vite": "^6.0.5"
-  }
+  },
+  "homepage": "https://devgeniuscode.github.io/HandCoin/"
 }
