--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   "dependencies": {
     "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
-    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-qr-code": "^2.0.15",
     "styled-components": "^6.1.14"
   },
   "devDependencies": {
