--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   "dependencies": {
     "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
+    "canvas": "^3.0.1",
+    "gifencoder": "^2.0.1",
+    "qr-code-styling": "^1.9.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-qr-code": "^2.0.15",
